--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,39 @@
 **/target/
 **/build/
+
+### Gradle ###
+!.mvn/wrapper/maven-wrapper.jar
 **/gradle/
-**/.gradle/
-**/.idea/
-gradle.properties
+.gradle
 gradlew
-gradlew.bat
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+*.bat
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+# Ignore Gradle build output directory
+build
+
+.pit
+pitest-report
